--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
 
     implementation 'org.sufficientlysecure:html-textview:4.0'
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
