--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchActivity"
+        <activity android:name=".CommentActivity"></activity>
+        <activity
+            android:name=".SearchActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/SettingsTheme"
-            >
-
-        </activity>
-        <activity android:name=".WeatherActivity"></activity>
+            android:theme="@style/SettingsTheme"></activity>
+        <activity android:name=".WeatherActivity" />
         <activity android:name=".ReadNewsActivity" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
